# V7

v7_face/: =4.1  README.md  detect.py  detect_rec_plate.py  export_onnx.sh  train.py  train_face.sh
v7_face/cpp/yolov7-face-ncnn/: CMakeLists.txt
v7_face/cpp/yolov7-face-ncnn/src/: yolov7face.cpp
v7_face/cpp/yolov7-face-snpe/: CMakeLists.txt  dnn_main.cpp
v7_face/cpp/yolov7-face-snpe/include/: yolov7face.h
v7_face/cpp/yolov7-face-snpe/models/: yolov7-lite-t_168.dlc
v7_face/cpp/yolov7-face-snpe/src/: main.cpp  yolov7face.cpp
v7_face/cpp/yolov7-face-snpe/ubuntu_third_party/Opencv4.7.0/lib/: libopencv_calib3d.so.4.7.0  libopencv_features2d.so.4.7.0  libopencv_flann.so.4.7.0  libopencv_highgui.so.4.7.0  libopencv_imgcodecs.so.4.7.0  libopencv_ml.so.4.7.0  libopencv_objdetect.so.4.7.0  libopencv_photo.so.4.7.0  libopencv_stitching.so.4.7.0  libopencv_video.so.4.7.0  libopencv_videoio.so.4.7.0
v7_face/cpp/yolov7-face-snpe/ubuntu_third_party/Opencv4.7.0/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
v7_face/data/: widerface.yaml
v7_face/data/widerface/train/: labels.cache
v7_face/data/widerface/train/labels/: 0_Parade_marchingband_1_12.txt  0_Parade_marchingband_1_13.txt  0_Parade_marchingband_1_17.txt  0_Parade_marchingband_1_19.txt  0_Parade_marchingband_1_25.txt  0_Parade_marchingband_1_31.txt  0_Parade_marchingband_1_33.txt  0_Parade_marchingband_1_35.txt  0_Parade_marchingband_1_37.txt  0_Parade_marchingband_1_45.txt  0_Parade_marchingband_1_48.txt  0_Parade_marchingband_1_5.txt  0_Parade_marchingband_1_50.txt  0_Parade_marchingband_1_56.txt  (+6 more)
v7_face/runs/train/exp/: events.out.tfevents.1712904442.ubuntu.4475.0  opt.yaml  results.txt
v7_face/runs/train/exp2/: events.out.tfevents.1712917092.ubuntu.7207.0  hyp.yaml  opt.yaml  results.txt
yolov7_on_snpe_/: modify.py  zg_modify.py
yolov7_on_snpe_/yolov7/: CMakeLists.txt  yolo_tiny_640x640_85classes.cpp
yolov7_on_snpe_/yolov7_tiny-snpe210/: CMakeLists.txt  config.yaml
yolov7_on_snpe_/yolov7_tiny-snpe210/src/: yolo_tiny_640x640_85classes.cpp
yolov7_on_snpe_/yolov7_tiny-snpe210/ubuntu_third_party/Opencv4.6/include/opencv2/: cvconfig.h
yolov7_on_snpe_/yolov7_tiny-snpe210/ubuntu_third_party/Opencv4.6/lib/: libopencv_calib3d.so.4.6.0  libopencv_features2d.so.4.6.0  libopencv_flann.so.4.6.0  libopencv_highgui.so.4.6.0  libopencv_imgcodecs.so.4.6.0  libopencv_ml.so.4.6.0  libopencv_objdetect.so.4.6.0  libopencv_photo.so.4.6.0  libopencv_stitching.so.4.6.0  libopencv_video.so.4.6.0  libopencv_videoio.so.4.6.0  opencv4.pc
yolov7_on_snpe_/yolov7_tiny-snpe210/ubuntu_third_party/Opencv4.6/lib/opencv4/: OpenCVModules-release.cmake
yolov7_on_snpe_/yolov7_tiny-snpe210/ubuntu_third_party/snpe2.10/include/zdl/DiagLog/: IDiagLog.h  Options.h
yolov7_on_snpe_/yolov7_tiny-snpe210/ubuntu_third_party/snpe2.10/include/zdl/DlContainer/: DlContainer.h
yolov7_on_snpe_/yolov7_tiny-snpe210/ubuntu_third_party/snpe2.10/include/zdl/DlSystem/: DlEnums.h  DlEnums.hpp  DlError.h  DlError.hpp  DlOptional.hpp  DlVersion.h  IBufferAttributes.h  IOBufferDataTypeMap.h  ITensor.h  IUserBuffer.h  PlatformConfig.h  RuntimeList.h  SnpeApiExportDefine.h  StringList.h  TensorMap.h  TensorShape.h  TensorShapeMap.h  UserBufferMap.h  UserMemoryMap.h
yolov7_on_snpe_/yolov7_tiny-snpe210/ubuntu_third_party/snpe2.10/include/zdl/PlatformValidator/: PlatformValidator.h
yolov7_on_snpe_/yolov7_tiny-snpe210/ubuntu_third_party/snpe2.10/include/zdl/SNPE/: PSNPE.h  SNPE.h  SNPE.hpp  SNPEBuilder.h  SNPEUtil.h  UserBufferList.h
